# werewolf-ai

./: .gitignore  CLAUDE.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: config.py  main.py
backend/src/ai/: provider.py  session.py
backend/src/ai/prompts/: system.py
backend/src/ai/strategy/: jy_examples.py  tactics.py
backend/src/api/: app.py  ws_manager.py
backend/src/data/: __init__.py  boards.py
backend/src/engine/: event_bus.py  phase_machine.py  role_executor.py  win_checker.py
backend/src/models/: board.py  game.py  player.py  role.py  schemas.py
backend/src/services/: game_service.py
backend/src/tts/: __init__.py
backend/tests/: test_advanced.py  test_game_flow.py  test_game_service.py  test_night_flow.py  test_vote_flow.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/game/[id]/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/common/: PhaseTransition.tsx
frontend/src/components/game/: ActionPanel.tsx  GameTable.tsx  PlayerCard.tsx  SpeechBubble.tsx  Timeline.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/stores/: gameStore.ts
frontend/src/types/: game.ts
